--- a/index.html
+++ b/index.html
@@ -4,260 +4,278 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Barbershop</title>
-    <link rel="stylesheet" href="./css/normalise.css" />
-    <link rel="stylesheet" href="./css/variables.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Raleway:wght@700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/modern-normalize.css" />
+    <link rel="stylesheet" href="./css/common.css" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
-      <nav>
-        <a href="./index.html">
-          <img src="./images/logo.svg" alt="logo" />
-          SVG LOGO
-        </a>
-        <ul>
-          <li>
-            <a href="">О нас</a>
-          </li>
-          <li>
-            <a href="">Услуги и цены</a>
-          </li>
-          <li>
-            <a href="">Мастера</a>
-          </li>
-          <li>
-            <a href="">Контакты</a>
-          </li>
-        </ul>
-        <ul>
-          <li>
-            <a href="">Онлайн-запись</a>
-          </li>
-          <li>
-            <a href="tel:+380441111111">+38 044 111 11 11</a>
-          </li>
-        </ul>
-        <ul>
-          <li>
-            <a href="">Instagram</a>
-          </li>
-          <li>
-            <a href="">YouTube</a>
-          </li>
-        </ul>
-      </nav>
+      <div class="container">
+        <nav class="main-navigation">
+          <div class="main-header">
+            <a href="./index.html" class="main-logo">
+              <img src="./images/logo.svg" alt="logo" />
+            </a>
+            <ul class="navigation-list">
+              <li class="navigation-item">
+                <a href="" class="navigation-link">О нас</a>
+              </li>
+              <li class="navigation-item">
+                <a href="" class="navigation-link">Услуги и цены</a>
+              </li>
+              <li class="navigation-item">
+                <a href="" class="navigation-link">Мастера</a>
+              </li>
+              <li class="navigation-item">
+                <a href="" class="navigation-link">Контакты</a>
+              </li>
+            </ul>
+
+            <ul class="navigation-contacts-list">
+              <li class="navigation-phone">
+                <a href="tel:+380441111111">+38 044 111 11 11</a>
+              </li>
+              <li>
+                <a href="" class="ordering-button">Онлайн-запись</a>
+              </li>
+            </ul>
+          </div>
+
+          <ul class="social-links-list">
+            <li>
+              <a href="" class="social-link-item">Instagram</a>
+            </li>
+            <li>
+              <a href="" class="social-link-item">YouTube</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </header>
     <main>
       <!-- Герой -->
       <section>
-        <p>A hair salon for men in Kyiv</p>
-        <h1>BarberShop</h1>
-        <p>
-          Мы эксперты в модных мужских стрижках. Работаем быстро, осторожно и со
-          вкусом.
-        </p>
-        <button class="hero-btn">Назад</button>
-        <button class="hero-btn">Вперед</button>
+        <div class="container">
+          <p class="hero-text">A hair salon for men in Kyiv</p>
+          <h1 class="hero-title">BarberShop</h1>
+          <p class="hero-description">
+            Мы эксперты в модных мужских стрижках. Работаем быстро, осторожно и
+            со вкусом.
+          </p>
+          <button class="hero-btn hero-btn-back">Назад</button>
+          <button class="hero-btn hero-btn-forward">Вперед</button>
+        </div>
       </section>
 
       <!-- О нас -->
       <section>
-        <ul>
-          <li>
-            <img src="./images/img 1.jpg" alt="img" width="270" height="445" />
-          </li>
-          <li>
-            <img src="./images/img 2.jpg" alt="img" width="270" height="445" />
-          </li>
-        </ul>
-        <div>
-          <h2>О нас</h2>
-          <p>
-            Лучший Барбершоп <br />
-            твоего города
-          </p>
-          <p>
-            Если ты хочешь добавить в свой образ больше уверенности – тебе точно
-            к нам.
-          </p>
-          <p>
-            Мы команда, которая никогда не останавливается на достигнутом и
-            жаждет перемен. И когда ты попадешь в руки нашего мастера, то уже
-            никогда не сможешь быть прежним. Мы команда, которая всегда с
-            клиентами "на одной волне". Поэтому, мы всегда готовы
-            усовершенствовать каждого, кто к нам приходит!
-          </p>
-          <a href="">Онлайн-запись</a>
+        <div class="container">
+          <ul>
+            <li>
+              <img
+                src="./images/img 1.jpg"
+                alt="img"
+                width="270"
+                height="445"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/img 2.jpg"
+                alt="img"
+                width="270"
+                height="445"
+              />
+            </li>
+          </ul>
+          <div>
+            <p class="about-main-text">О нас</p>
+            <h2 class="about-title">Лучший Барбершоп твоего города</h2>
+            <p class="about-secondary-text">
+              Если ты хочешь добавить в свой образ больше уверенности – тебе
+              точно к нам.
+            </p>
+            <p class="about-description">
+              Мы команда, которая никогда не останавливается на достигнутом и
+              жаждет перемен. И когда ты попадешь в руки нашего мастера, то уже
+              никогда не сможешь быть прежним. Мы команда, которая всегда с
+              клиентами "на одной волне". Поэтому, мы всегда готовы
+              усовершенствовать каждого, кто к нам приходит!
+            </p>
+            <a href="" class="ordering-button ordering-button-dark"
+              >Онлайн-запись</a
+            >
+          </div>
         </div>
       </section>
 
       <!-- Услуги и цены  -->
       <section>
-        <p>Проведи время в компании лучших мастеров</p>
-        <h2>Услуги и цены</h2>
-        <table>
-          <tr>
-            <td>Мужская стрижка</td>
-            <td>от 300 грн.</td>
-          </tr>
-          <tr>
-            <td>Стрижка бороды</td>
-            <td>от 200 грн.</td>
-          </tr>
-          <tr>
-            <td>Стрижка усов</td>
-            <td>от 200 грн.</td>
-          </tr>
-          <tr>
-            <td>Бритье опасной бритвой</td>
-            <td>от 200 грн.</td>
-          </tr>
-        </table>
-        <table>
-          <tr>
-            <td>Cтрижка у стажера</td>
-            <td>от 50 грн.</td>
-          </tr>
-          <tr>
-            <td>Стрижка под насадку</td>
-            <td>от 200 грн.</td>
-          </tr>
-          <tr>
-            <td>Детская стрижка (до 12 лет)</td>
-            <td>от 300 грн.</td>
-          </tr>
-          <tr>
-            <td>Камуфлирование седины</td>
-            <td>от 200 грн.</td>
-          </tr>
-        </table>
-        <a href="">Онлайн-запись</a>
+        <div class="container">
+          <p class="services-text">Проведи время в компании лучших мастеров</p>
+          <h2 class="services-title">Услуги и цены</h2>
+          <table class="services-table">
+            <tr>
+              <td>Мужская стрижка</td>
+              <td>от 300 грн.</td>
+            </tr>
+            <tr>
+              <td>Стрижка бороды</td>
+              <td>от 200 грн.</td>
+            </tr>
+            <tr>
+              <td>Стрижка усов</td>
+              <td>от 200 грн.</td>
+            </tr>
+            <tr>
+              <td>Бритье опасной бритвой</td>
+              <td>от 200 грн.</td>
+            </tr>
+          </table>
+
+          <table class="services-table">
+            <tr>
+              <td>Cтрижка у стажера</td>
+              <td>от 50 грн.</td>
+            </tr>
+            <tr>
+              <td>Стрижка под насадку</td>
+              <td>от 200 грн.</td>
+            </tr>
+            <tr>
+              <td>Детская стрижка (до 12 лет)</td>
+              <td>от 300 грн.</td>
+            </tr>
+            <tr>
+              <td>Камуфлирование седины</td>
+              <td>от 200 грн.</td>
+            </tr>
+          </table>
+          <a href="" class="ordering-button">Онлайн-запись</a>
+        </div>
       </section>
 
       <!-- Почему приходят именно к нам? -->
       <section>
-        <ul>
-          <li>
-            <p>600</p>
-            <p>Lorem, Lorem, Lorem</p>
-          </li>
-          <li>
-            <p>600</p>
-            <p>Lorem, Lorem, Lorem</p>
-          </li>
-          <li>
-            <p>600</p>
-            <p>Lorem, Lorem, Lorem</p>
-          </li>
-          <li>
-            <p>600</p>
-          </li>
-          <p>Lorem, Lorem, Lorem</p>
-        </ul>
-        <div>
-          <p>старая традиционная школа</p>
-          <h2>Почему приходят именно к нам?</h2>
-          <p>
-            О нас говорят только хорошее. Но лучше 1 раз увидеть и
-            прочувствовать, чем 10 раз прочитать.
-          </p>
+        <div class="container">
+          <ul>
+            <li>
+              <p class="advantages-number">600</p>
+              <p class="advantages-description">Довольных клиентов в день</p>
+            </li>
+
+            <li>
+              <p class="advantages-number">20</p>
+              <p class="advantages-description">Лучших мастеров Киева</p>
+            </li>
+
+            <li>
+              <p class="advantages-number">50</p>
+              <p class="advantages-description">Наград за отличный сервис</p>
+            </li>
+
+            <li>
+              <p class="advantages-number">100</p>
+              <p class="advantages-description">Подарков постоянным клиентам</p>
+            </li>
+          </ul>
+          <div>
+            <p class="advantages-text">старая традиционная школа</p>
+            <h2 class="advantages-title">Почему приходят именно к нам?</h2>
+            <p class="advantages-main-description">
+              О нас говорят только хорошее. Но лучше 1 раз увидеть и
+              прочувствовать, чем 10 раз прочитать.
+            </p>
+          </div>
         </div>
       </section>
 
       <!-- Наши мастера -->
       <section>
-        <p>для настоящих ценителей атмосферы</p>
-        <h2>Наши мастера</h2>
-        <ul>
-          <li>
-            <img src="" alt="John Smith" />
-            <h3>John Smith</h3>
-            <p>Extreme Barber</p>
-            <ul>
-              <li>
-                <a href=""><img src="" alt="Instagram" /></a>
-              </li>
-              <li>
-                <a href=""><img src="" alt="Twitter" /></a>
-              </li>
-              <li>
-                <a href=""><img src="" alt="Facebook" /></a>
-              </li>
-              <li>
-                <a href=""><img src="" alt="LinkedIn" /></a>
-              </li>
-            </ul>
-          </li>
-          <!-- <figure>
-            <img src="" alt="Michele Doe" />
-            <figcaption>Michele Doe</figcaption>
-            <figcaption>Extreme Barber</figcaption>
-          </figure>
+        <div class="container">
+          <p class="team-text">для настоящих ценителей атмосферы</p>
+          <h2 class="team-title">Наши мастера</h2>
           <ul>
             <li>
-              <a href=""><img src="" alt="Instagram" /></a>
+              <img src="" alt="John Smith" />
+              <h3 class="person-name">John Smith</h3>
+              <p class="person-position">Extreme Barber</p>
+              <ul>
+                <li>
+                  <a href=""><img src="" alt="Instagram" /></a>
+                </li>
+                <li>
+                  <a href=""><img src="" alt="Twitter" /></a>
+                </li>
+                <li>
+                  <a href=""><img src="" alt="Facebook" /></a>
+                </li>
+                <li>
+                  <a href=""><img src="" alt="LinkedIn" /></a>
+                </li>
+              </ul>
             </li>
+
             <li>
-              <a href=""><img src="" alt="Twitter" /></a>
+              <img src="" alt="Michele Doe" />
+              <h3 class="person-name">Michele Doe</h3>
+              <p class="person-position">Extreme Barber</p>
+              <ul>
+                <li>
+                  <a href=""><img src="" alt="Instagram" /></a>
+                </li>
+                <li>
+                  <a href=""><img src="" alt="Twitter" /></a>
+                </li>
+                <li>
+                  <a href=""><img src="" alt="Facebook" /></a>
+                </li>
+                <li>
+                  <a href=""><img src="" alt="LinkedIn" /></a>
+                </li>
+              </ul>
             </li>
+
             <li>
-              <a href=""><img src="" alt="Facebook" /></a>
+              <img src="" alt="Alan Black" />
+              <h3 class="person-name">Alan Black</h3>
+              <p class="person-position">Extreme Barber</p>
+              <ul>
+                <li>
+                  <a href=""><img src="" alt="Instagram" /></a>
+                </li>
+                <li>
+                  <a href=""><img src="" alt="Twitter" /></a>
+                </li>
+                <li>
+                  <a href=""><img src="" alt="Facebook" /></a>
+                </li>
+                <li>
+                  <a href=""><img src="" alt="LinkedIn" /></a>
+                </li>
+              </ul>
             </li>
-            <li>
-              <a href=""><img src="" alt="LinkedIn" /></a>
-            </li>
-          </ul> -->
-          <li>
-            <img src="" alt="Michele Doe" />
-            <h3>Michele Doe</h3>
-            <p>Extreme Barber</p>
-            <ul>
-              <li>
-                <a href=""><img src="" alt="Instagram" /></a>
-              </li>
-              <li>
-                <a href=""><img src="" alt="Twitter" /></a>
-              </li>
-              <li>
-                <a href=""><img src="" alt="Facebook" /></a>
-              </li>
-              <li>
-                <a href=""><img src="" alt="LinkedIn" /></a>
-              </li>
-            </ul>
-          </li>
-          <li>
-            <img src="" alt="Alan Black" />
-            <h3>Alan Black</h3>
-            <p>Extreme Barber</p>
-            <ul>
-              <li>
-                <a href=""><img src="" alt="Instagram" /></a>
-              </li>
-              <li>
-                <a href=""><img src="" alt="Twitter" /></a>
-              </li>
-              <li>
-                <a href=""><img src="" alt="Facebook" /></a>
-              </li>
-              <li>
-                <a href=""><img src="" alt="LinkedIn" /></a>
-              </li>
-            </ul>
-          </li>
-        </ul>
+          </ul>
+        </div>
       </section>
 
       <!-- Наши работы -->
       <section>
-        <!-- <h2>Наши работы</h2> -->
-        <p>На латинском языке “барба” означает “борода”</p>
-        <ul>
-          <li><img src="" alt="" /></li>
-          <li><img src="" alt="" /></li>
-          <li><img src="" alt="" /></li>
-          <li><img src="" alt="" /></li>
-        </ul>
+        <div class="container">
+          <h2 class="visually-hidden">Наши работы</h2>
+          <p class="works-text">На латинском языке “барба” означает “борода”</p>
+          <ul>
+            <li><img src="" alt="" /></li>
+            <li><img src="" alt="" /></li>
+            <li><img src="" alt="" /></li>
+            <li><img src="" alt="" /></li>
+          </ul>
+        </div>
       </section>
 
       <!-- Онлайн-запись и Контакты -->
