--- a/index.html
+++ b/index.html
@@ -38,10 +38,14 @@
 
             <ul class="navigation-contacts-list">
               <li class="navigation-phone">
-                <a href="tel:+380441111111">+38 044 111 11 11</a>
+                <a href="tel:+380441111111" class="contact-link"
+                  >+38 044 111 11 11</a
+                >
               </li>
               <li>
-                <a href="" class="ordering-button">Онлайн-запись</a>
+                <a href="" class="contact-link ordering-button"
+                  >Онлайн-запись</a
+                >
               </li>
             </ul>
           </div>
@@ -59,7 +63,7 @@
     </header>
     <main>
       <!-- Герой -->
-      <section>
+      <section class="hero-section">
         <div class="container">
           <p class="hero-text">A hair salon for men in Kyiv</p>
           <h1 class="hero-title">BarberShop</h1>
@@ -73,10 +77,10 @@
       </section>
 
       <!-- О нас -->
-      <section>
-        <div class="container">
-          <ul>
-            <li>
+      <section class="about-section">
+        <div class="container about-flex-container">
+          <ul class="about-image-list">
+            <li class="about-image-item">
               <img
                 src="./images/img 1.jpg"
                 alt="img"
@@ -84,7 +88,8 @@
                 height="445"
               />
             </li>
-            <li>
+
+            <li class="about-image-item">
               <img
                 src="./images/img 2.jpg"
                 alt="img"
@@ -93,6 +98,7 @@
               />
             </li>
           </ul>
+
           <div>
             <p class="about-main-text">О нас</p>
             <h2 class="about-title">Лучший Барбершоп твоего города</h2>
@@ -115,75 +121,83 @@
       </section>
 
       <!-- Услуги и цены  -->
-      <section>
+      <section class="prises-section">
         <div class="container">
           <p class="services-text">Проведи время в компании лучших мастеров</p>
           <h2 class="services-title">Услуги и цены</h2>
-          <table class="services-table">
-            <tr>
-              <td>Мужская стрижка</td>
-              <td>от 300 грн.</td>
-            </tr>
-            <tr>
-              <td>Стрижка бороды</td>
-              <td>от 200 грн.</td>
-            </tr>
-            <tr>
-              <td>Стрижка усов</td>
-              <td>от 200 грн.</td>
-            </tr>
-            <tr>
-              <td>Бритье опасной бритвой</td>
-              <td>от 200 грн.</td>
-            </tr>
-          </table>
+          <div class="tables-flex">
+            <table class="services-table services-table-left">
+              <tr>
+                <td>Мужская стрижка</td>
+                <td>от 300 грн.</td>
+              </tr>
+              <tr>
+                <td>Стрижка бороды</td>
+                <td>от 200 грн.</td>
+              </tr>
+              <tr>
+                <td>Стрижка усов</td>
+                <td>от 200 грн.</td>
+              </tr>
+              <tr>
+                <td>Бритье опасной бритвой</td>
+                <td>от 200 грн.</td>
+              </tr>
+            </table>
 
-          <table class="services-table">
-            <tr>
-              <td>Cтрижка у стажера</td>
-              <td>от 50 грн.</td>
-            </tr>
-            <tr>
-              <td>Стрижка под насадку</td>
-              <td>от 200 грн.</td>
-            </tr>
-            <tr>
-              <td>Детская стрижка (до 12 лет)</td>
-              <td>от 300 грн.</td>
-            </tr>
-            <tr>
-              <td>Камуфлирование седины</td>
-              <td>от 200 грн.</td>
-            </tr>
-          </table>
-          <a href="" class="ordering-button">Онлайн-запись</a>
+            <table class="services-table services-table-right">
+              <tr>
+                <td>Cтрижка у стажера</td>
+                <td>от 50 грн.</td>
+              </tr>
+              <tr>
+                <td>Стрижка под насадку</td>
+                <td>от 200 грн.</td>
+              </tr>
+              <tr>
+                <td>Детская стрижка (до 12 лет)</td>
+                <td>от 300 грн.</td>
+              </tr>
+              <tr>
+                <td>Камуфлирование седины</td>
+                <td>от 200 грн.</td>
+              </tr>
+            </table>
+          </div>
+
+          <div class="button-container">
+            <a href="" class="ordering-button ordering-button-filled"
+              >Онлайн-запись</a
+            >
+          </div>
         </div>
       </section>
 
       <!-- Почему приходят именно к нам? -->
-      <section>
-        <div class="container">
-          <ul>
-            <li>
-              <p class="advantages-number">600</p>
+      <section class="advantages-section">
+        <div class="container advantages-flex">
+          <ul class="advantages-list">
+            <li class="advantages-item">
+              <p class="advantages-number">600+</p>
               <p class="advantages-description">Довольных клиентов в день</p>
             </li>
 
-            <li>
-              <p class="advantages-number">20</p>
-              <p class="advantages-description">Лучших мастеров Киева</p>
-            </li>
-
-            <li>
-              <p class="advantages-number">50</p>
+            <li class="advantages-item">
+              <p class="advantages-number">50+</p>
               <p class="advantages-description">Наград за отличный сервис</p>
             </li>
 
-            <li>
-              <p class="advantages-number">100</p>
+            <li class="advantages-item">
+              <p class="advantages-number">20+</p>
+              <p class="advantages-description">Лучших мастеров Киева</p>
+            </li>
+
+            <li class="advantages-item">
+              <p class="advantages-number">100+</p>
               <p class="advantages-description">Подарков постоянным клиентам</p>
             </li>
           </ul>
+
           <div>
             <p class="advantages-text">старая традиционная школа</p>
             <h2 class="advantages-title">Почему приходят именно к нам?</h2>
@@ -196,11 +210,11 @@
       </section>
 
       <!-- Наши мастера -->
-      <section>
+      <section class="team-container">
         <div class="container">
           <p class="team-text">для настоящих ценителей атмосферы</p>
           <h2 class="team-title">Наши мастера</h2>
-          <ul>
+          <ul class="team-list">
             <li>
               <img src="" alt="John Smith" />
               <h3 class="person-name">John Smith</h3>
@@ -265,11 +279,11 @@
       </section>
 
       <!-- Наши работы -->
-      <section>
+      <section class="works-container">
         <div class="container">
           <h2 class="visually-hidden">Наши работы</h2>
           <p class="works-text">На латинском языке “барба” означает “борода”</p>
-          <ul>
+          <ul class="works-list">
             <li><img src="" alt="" /></li>
             <li><img src="" alt="" /></li>
             <li><img src="" alt="" /></li>
@@ -280,34 +294,54 @@
 
       <!-- Онлайн-запись и Контакты -->
       <section>
-        <div>
-          <h2>Онлайн-запись</h2>
-          <form action="">
-            <input type="text" name="name" id="name" />
-            <input type="text" name="tel" id="tel" />
-            <textarea name="msg" id="" cols="30" rows="10"></textarea>
-            <button>отправить</button>
-          </form>
-        </div>
-        <div>
-          <h2>Контакты</h2>
-          <address>
-            <a href=""
-              >ул. Васильковая, 7А <br />
-              Киев, 08132</a
-            >
-            <a href="tel:+380441111111">+38 044 111 11 11</a>
-            <a href="mailto:barbershop@email.com">barbershop@email.com</a>
-          </address>
-          <h3>Время работы</h3>
-          <p>Ежедневно с 9:00 до 22:00</p>
+        <div class="container online-container">
+          <div>
+            <h2 class="online-title">Онлайн-запись</h2>
+            <form action="">
+              <input type="text" name="name" id="name" placeholder="имя*" />
+              <input type="text" name="tel" id="tel" placeholder="телефон*" />
+              <textarea
+                name="msg"
+                id=""
+                cols="30"
+                rows="10"
+                placeholder="сообщение"
+              ></textarea>
+              <button class="sending-button">отправить</button>
+            </form>
+          </div>
+
+          <div>
+            <h2 class="online-title">Контакты</h2>
+            <address>
+              <a href="" class="online-contacts-item"
+                >ул. Васильковая, 7А <br />
+                Киев, 08132</a
+              >
+              <a href="tel:+380441111111" class="online-contacts-item"
+                >+38 044 111 11 11</a
+              >
+              <a
+                href="mailto:barbershop@email.com"
+                class="online-contacts-item mail-underlined"
+                >barbershop@email.com</a
+              >
+            </address>
+            <h3 class="online-schedule">Время работы</h3>
+            <p class="online-contacts-item">Ежедневно с 9:00 до 22:00</p>
+          </div>
         </div>
       </section>
     </main>
+
     <footer>
-      <p>&copy; Copyright 2020</p>
-      <a href="">Instagram</a>
-      <a href="">YouTube</a>
+      <div class="container main-footer">
+        <p class="copyrights">&copy; Copyright 2020</p>
+        <div>
+          <a href="" class="footer-link">Instagram</a>
+          <a href="" class="footer-link">YouTube</a>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
