Добавляет иконки и фото

--- a/index.html
+++ b/index.html
@@ -215,64 +215,171 @@
           <p class="team-text">для настоящих ценителей атмосферы</p>
           <h2 class="team-title">Наши мастера</h2>
           <ul class="team-list">
-            <li>
-              <img src="" alt="John Smith" />
-              <h3 class="person-name">John Smith</h3>
-              <p class="person-position">Extreme Barber</p>
-              <ul>
-                <li>
-                  <a href=""><img src="" alt="Instagram" /></a>
-                </li>
-                <li>
-                  <a href=""><img src="" alt="Twitter" /></a>
-                </li>
-                <li>
-                  <a href=""><img src="" alt="Facebook" /></a>
-                </li>
-                <li>
-                  <a href=""><img src="" alt="LinkedIn" /></a>
-                </li>
-              </ul>
+            <li class="team-thumb">
+              <img
+                src="./images/john-smith.jpg"
+                alt="John Smith"
+                width="370"
+                height="346"
+              />
+
+              <div class="team-content">
+                <h3 class="person-name">John Smith</h3>
+                <p class="person-position">Extreme Barber</p>
+                <ul class="person-links">
+                  <li class="person-links-item">
+                    <a
+                      href="https://www.instagram.com/"
+                      class="icon-background"
+                    >
+                      <svg class="social-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="person-links-item">
+                    <a href="https://twitter.com/" class="icon-background">
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="person-links-item">
+                    <a href="https://www.facebook.com/" class="icon-background">
+                      <svg class="social-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="person-links-item">
+                    <a href="https://www.linkedin.com/" class="icon-background">
+                      <svg class="social-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
 
-            <li>
-              <img src="" alt="Michele Doe" />
-              <h3 class="person-name">Michele Doe</h3>
-              <p class="person-position">Extreme Barber</p>
-              <ul>
-                <li>
-                  <a href=""><img src="" alt="Instagram" /></a>
-                </li>
-                <li>
-                  <a href=""><img src="" alt="Twitter" /></a>
-                </li>
-                <li>
-                  <a href=""><img src="" alt="Facebook" /></a>
-                </li>
-                <li>
-                  <a href=""><img src="" alt="LinkedIn" /></a>
-                </li>
-              </ul>
+            <li class="team-thumb">
+              <img
+                src="./images/michele-doe.jpg"
+                alt="Michele Doe"
+                width="370"
+                height="346"
+              />
+
+              <div class="team-content">
+                <h3 class="person-name">Michele Doe</h3>
+                <p class="person-position">Extreme Barber</p>
+                <ul class="person-links">
+                  <li class="person-links-item">
+                    <a
+                      href="https://www.instagram.com/"
+                      class="icon-background"
+                    >
+                      <svg class="social-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="person-links-item">
+                    <a href="https://twitter.com/" class="icon-background">
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="person-links-item">
+                    <a href="https://www.facebook.com/" class="icon-background">
+                      <svg class="social-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="person-links-item">
+                    <a href="https://www.linkedin.com/" class="icon-background">
+                      <svg class="social-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
 
-            <li>
-              <img src="" alt="Alan Black" />
-              <h3 class="person-name">Alan Black</h3>
-              <p class="person-position">Extreme Barber</p>
-              <ul>
-                <li>
-                  <a href=""><img src="" alt="Instagram" /></a>
-                </li>
-                <li>
-                  <a href=""><img src="" alt="Twitter" /></a>
-                </li>
-                <li>
-                  <a href=""><img src="" alt="Facebook" /></a>
-                </li>
-                <li>
-                  <a href=""><img src="" alt="LinkedIn" /></a>
-                </li>
-              </ul>
+            <li class="team-thumb">
+              <img
+                src="./images/alan-black.jpg"
+                alt="Alan Black"
+                width="370"
+                height="346"
+              />
+              <div class="team-content">
+                <h3 class="person-name">Alan Black</h3>
+                <p class="person-position">Extreme Barber</p>
+                <ul class="person-links">
+                  <li class="person-links-item">
+                    <a
+                      href="https://www.instagram.com/"
+                      class="icon-background"
+                    >
+                      <svg class="social-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="person-links-item">
+                    <a href="https://twitter.com/" class="icon-background">
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="person-links-item">
+                    <a href="https://www.facebook.com/" class="icon-background">
+                      <svg class="social-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="person-links-item">
+                    <a href="https://www.linkedin.com/" class="icon-background">
+                      <svg class="social-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
           </ul>
         </div>
